--- a/doc/references.bib
+++ b/doc/references.bib
@@ -9,6 +9,69 @@
   publisher={Oxford University Press US}
 }
 
+
+@article{soss1999lessons,
+  title={Lessons of welfare: Policy design, political learning, and political action},
+  author={Soss, Joe},
+  journal={American Political Science Review},
+  pages={363--380},
+  year={1999},
+  publisher={JSTOR}
+}
+
+@article{bruch2010policy,
+  title={From policy to polity: Democracy, paternalism, and the incorporation of disadvantaged citizens},
+  author={Bruch, Sarah K and Ferree, Myra Marx and Soss, Joe},
+  journal={American Sociological Review},
+  volume={75},
+  number={2},
+  pages={205--226},
+  year={2010},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{dyck2018primary,
+  title={Primary distrust: Political distrust and support for the insurgent candidacies of Donald Trump and Bernie Sanders in the 2016 primary},
+  author={Dyck, Joshua J and Pearson-Merkowitz, Shanna and Coates, Michael},
+  journal={PS: Political Science \& Politics},
+  volume={51},
+  number={2},
+  pages={351--357},
+  year={2018},
+  publisher={Cambridge University Press}
+}
+
+@article{campbell2012policy,
+  title={Policy makes mass politics},
+  author={Campbell, Andrea Louise},
+  journal={Annual Review of Political Science},
+  volume={15},
+  pages={333--351},
+  year={2012},
+  publisher={Annual Reviews}
+}
+
+@article{soss_lessons_1999,
+	title = {Lessons of welfare: {Policy} design, political learning, and political action},
+	journal = {American Political Science Review},
+	author = {Soss, Joe},
+	year = {1999},
+	note = {Publisher: JSTOR},
+	pages = {363--380},
+}
+
+@article{bruch_policy_2010,
+	title = {From policy to polity: {Democracy}, paternalism, and the incorporation of disadvantaged citizens},
+	volume = {75},
+	number = {2},
+	journal = {American Sociological Review},
+	author = {Bruch, Sarah K and Ferree, Myra Marx and Soss, Joe},
+	year = {2010},
+	note = {Publisher: Sage Publications Sage CA: Los Angeles, CA},
+	pages = {205--226},
+}
+
+
 @book{lenz2013follow,
   title={Follow the leader?: How Voters Respond to Politicians' Policies and Performance},
   author={Lenz, Gabriel S},
