--- a/intra-party-note.Rmd
+++ b/intra-party-note.Rmd
@@ -1,13 +1,15 @@
 ---
 title: "Intra-Party Affect"
+subtitle: "Primary Elections and Declining In-Party Warmth"
 author: "Rob Lytle"
 output:
   pdf_document:
+#thanks: "The scaffolding for this project was laid last year as a purely descriptive work. Since then, almost every paragraph has (thankfully) been re-written and every figure recreated, recoded, or discarded in favor of something altogether new as the project's focus shifts towards causal identification and theory-building. Next Fall, I hope to be defending some further-evolved version of this document as my practicum, and from their&mdash;my dissertation. I've been very happy to have the opportunity to workshop and defend my arguments and analytical approach in class this semester, and look forward to hearing your feedback on this iteration of the document!"
 bibliography: doc/references.bib
 documentclass: paper
 fontsize: 12
 header-includes:
-- \usepackage[margin=1in]{geometry}
+- \usepackage[margin=1.2in]{geometry}
 - \usepackage{caption}
 - \usepackage{amsmath}
 - \usepackage{mathrsfs}
@@ -38,20 +40,19 @@ library(gridExtra)
 
 \doublespacing
 
-In 2008, despite her roll as Democratic standard-bearer, Supporters of Hillary Clinton's primary campaign were colder towards their party than any other group of Democratic primary voters on the ANES 100-point Feeling Thermometer. Clinton's defeat by Barack Obama in June of 2008 spawned the "Party Unity My Ass" movement, engaging in various forms of protest against the DNC and pledging *en masse* not to support the (relative) party outsider Barack Obama in the general election^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual].
+# Introduction
 
+In 2008, despite her position as Democratic standard-bearer, supporters of Hillary Clinton's primary campaign were colder towards their party than any other group of Democratic primary voters on the ANES 100-point Feeling Thermometer. Clinton's defeat by Barack Obama in June of 2008 spawned the "Party Unity My Ass" movement, which engaged in various forms of protest against the DNC and pledging *en masse* not to support the (relative) party outsider Barack Obama in the general election^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual].
 Clinton supporters' posture towards their party in 2016 bore little semblance to that of the '08 race. Bernie Sanders---a former independent and self-identified socialist---leaned into the role of an insurgent, anti-establishment candidate; predicating his campaign on a conflict between the working-class and the elites of both major parties. Sanders supporters, angry with the DNC and reluctant to support Clinton in November led a loosely organized movement of Democratic party discontents to found groups like *Justice Democrats* and expand membership of organizations like the *Democratic Socialists of America* and various state and local progressive caucuses to protest perceived slights by the party establishment and support further left and anti-establishment down-ballot candidates. 
 
-This is not particularly surprising on its own. Sanders campaigned against the party establishment---it is not a stretch that he would attract those disillusioned or unhappy with the party. The story is more complicated. Republican supporters of Donald Trump---whose campaign was even more exuberantly hostile towards the Republican party---were *warmer* towards their party than any other candidates' supporters, despite the mutual hostility between Trump and established Republican elites.
+This is not particularly surprising on its own. Sanders campaigned against the party establishment---it is not a stretch that he would attract those disillusioned or unhappy with the party. The story is more complicated. Republican supporters of Donald Trump---whose campaign was even more exuberantly hostile towards the Republican party than Sanders' was toward the Democrats---were *warmer* towards their party than any other candidates' supporters, despite the mutual hostility between Trump and established Republican elites.
 
-In the last decade, factions like the Tea Party and alt-right in the Republican Party and Progressives and Democratic Socialists in the Democratic party have presented challenges to their party's status-quo. While factions like the "Blue Dog Democrats" or "Main Street Republicans" are nothing new and have long communicated a brand *separate* from their party [@clarke2017party], the brand being communicated has not necessarily been hostile to mainline party elites. The same cannot be said for more recently ascendant groups like the Justice Democrats, Tea Party, or alt-right. Candidates aligned with these factions often explicitly position themselves as adversarial to established, mainstream members of their party, challenging "establishment" representatives in primary battles and expressing dissatisfaction with---or open hostility towards---party leaders. These contests occasionally garner national attention, as was the case with Democrats Alexandria Ocasio Cortez's and Marie Newman's---both Justice Democrats---successful challenges of Joe Crowley and Dan Lipinski respectively. During the Obama administration, slew of Tea Party affiliated candidates including Ted Cruz and Rand Paul achieved national prominence after winning crowded primaries with the anti-establishment branding of the Tea Party. More recently, at least 81 candidates supporting the Q-Anon conspiracy theory have won primaries in House and Senate races, 24 of whom will be on the ballot in November\footnote{https://www.mediamatters.org/qanon-conspiracy-theory/here-are-qanon-supporters-running-congress-2020}. One of these candidates, Marjorie Taylor Greene, resides in a deep-red district and is almost certain to take office in January.
+In the last decade, factions like the Tea Party and alt-right in the Republican Party and Progressives and Democratic Socialists in the Democratic party have presented challenges to their party's status-quo. While factions like the "Blue Dog Democrats" or "Main Street Republicans" are nothing new and have long communicated a brand *separate* from their party [@clarke2017party], the brand being communicated has not necessarily been outwardly hostile to mainline party elites. The same cannot be said for more recently ascendant groups like the *Justice Democrats*, *Tea Party*, or the *alt-right*. Candidates aligned with these factions often explicitly position themselves as adversarial to established, mainstream members of their party, challenging "establishment" representatives in primary battles and expressing dissatisfaction with---or open hostility towards---party leaders. These contests occasionally garner national attention, as was the case with Democrats Alexandria Ocasio Cortez's and Marie Newman's---both Justice Democrats themselves---successful challenges of entrenched, establishment partisans Joe Crowley and Dan Lipinski respectively. During the Obama administration, slew of Tea Party affiliated candidates including Ted Cruz and Rand Paul achieved national prominence after winning crowded primaries with the anti-establishment branding of the Tea Party. More recently, at least 81 candidates supporting the Q-Anon conspiracy theory have won primaries in House and Senate races, 24 of whom were on the ballot in November\footnote{https://www.mediamatters.org/qanon-conspiracy-theory/here-are-qanon-supporters-running-congress-2020}. One of these candidates, Marjorie Taylor Greene, won her election in a deep-red Georgia district and is now a member of the House.
 
-There is evidence that the divisions between elite co-partisans are meaningful at the mass level. Using the case 2016 Democratic primary [@wronski2018tale] demonstrate that Democrats in 2016 primary were divided along authoritarian lines. Primary voters scoring high in authoritarian personality traits were more likely to support Hillary Clinton---those with few authoritarian tendencies were likely to be supporters of Bernie Sanders. [add more to this section, further build theory of why party loss matters]
+There is evidence that the divisions between elite co-partisans are salient to the mass public. Using the case 2016 Democratic primary @wronski2018tale demonstrates that Democrats in 2016 primary were divided along authoritarian lines. Primary voters scoring high in authoritarian personality traits were more likely to support Hillary Clinton---those with few authoritarian tendencies were likely to be supporters of Bernie Sanders.
 
-Across this backdrop of salient intra-party division not only has warmth towards the out-party declined [@iyengar2012affect; iyengar2018strengthening] but---particularly for Republicans---in party warmth as well @klar2018affective. What has been described as affective polarization may be better characterized as a generalized decline in warmth towards the political system. As in-party affect declines, so too has the role of positive partisanship (attachment to one's own party) been supplanted by hostility towards the out-party as a predictor of voting behavior [@iyengar2018strengthening]. **An increasing number of Democrats and Republicans, voters and nonvoters, and partisans and non-partisans are lukewarm or cold---not just towards an out-party but towards both major parties**. With this research note, I describe in detail how the distribution of mass-level partisan affect has shifted to provide context for the above findings. I close by discussing the implications of this shift and suggest avenues for future research.
+Across this backdrop of salient intra-party division not only has warmth towards the out-party declined [@iyengar2012affect; iyengar2018strengthening] but---particularly for Republicans---in party warmth as well @klar2018affective. What has been described as affective polarization may be better characterized as a generalized decline in warmth towards the political system. As in-party affect declines, so too has the role of positive partisanship (attachment to one's own party) been supplanted by hostility towards the out-party as a predictor of voting behavior [@iyengar2018strengthening]. An increasing number of Democrats and Republicans, voters and nonvoters, and partisans and non-partisans are lukewarm or cold---not just towards an out-party but towards both major parties. With this research note, I describe in detail how the distribution of mass-level partisan affect has shifted to provide context for the above findings, developing and providing mixed support for the hypothesis that some partisan decline is the result of factionalism during and after primary elections.
 
-
-# Results
 
 ## Trends in Intra-Party Affect
 
@@ -149,45 +150,93 @@ As shown in Figure 1, mean out party feeling thermometers for Democrats and Repu
 
 !["Increasing heterogeneity of in-party affect"](fig/gg-sd-ns.png) ***Fig 2:** The variance within in-party feeling thermometers has increased since 2004.*
 
-From 2004--2016 the variation within in-party feeling thermometer ratings has increased. the standard deviation of Republicans' in-party FTs increased from about 17--21 in this period, while Democrats' increased from 16-20. While the magnitude of this increase does not sound particularly impressive, *Fig. 2* makes clear that a period of increasing affective heterogeneity as large or prolonged as this has not been observed at any other point over the range of ANES data.
+From 2004--2016 the variation within in-party feeling thermometer ratings has increased. the standard deviation of Republicans' in-party FTs increased from about 17--21 in this period, while Democrats' increased from 16-20. While the magnitude of this increase does not sound particularly impressive, *Fig. 2* makes clear that a period of increasing affective heterogeneity as large or prolonged as this has not been observed at any other point over the range of ANES data. By bootstrapping 95\% confidence intervals for each year's in-party thermometer standard deviation we see that the increase is statistically significant as well as substantively significant.
 
-As variance increases, so to has the proportion of partisans who rate their own party below a 50---a substantively meaningful threshold indicating that partisans are more cold than warm toward their own party. When leaning independents are included---following [@klar2016independent] ---10% of Democrats and almost 20% of Republicans are found to be cold towards their own party (up from 5% each in 2004), while a sample which excludes leaning independents indicates 13% of Republicans and 8% of Democrats to be cold. Regardless of the cut-off point used to indicate cold affect, or the strength of partisans' identification with their party, the trend is robust---more partisans were cold to their party than has been observed at any point across the available data.
+As variance increases, so to has the proportion of partisans who rate their own party below a 50---an inherently meaningful threshold indicating that partisans are more cold than warm toward their own party. When leaning independents are included---following the insight of @klar2016independent that independents are best understood as "secret partisans"---10% of Democrats and almost 20% of Republicans are found to be cold towards their own party (up from 5% each in 2004), while a sample which excludes leaning independents indicates 13% of Republicans and 8% of Democrats to be cold. Regardless of the cut-off point used to indicate cold affect, or the strength of partisans' identification with their party, the trend is robust^[To this point, additional figures are available on this project's [GitHub Page](https://github.com/RobLytle/intra-party-affect).]---more partisans were cold to their party than has been observed at any point across the available data.
 
 Negative evaluations of parties are increasingly common. The modal value of independents' average party FT has always been 50; in the late 20^th^ century, the distribution was characterized by a rightward tail. From 2000--2016 that tail has shifted left. Far more independents now have a net-negative disposition towards the two major parties. Similarly, when examining the distributions of in-party feeling thermometers the left skew has become more apparent; more Republicans and Democrats are now cold---below 50---toward their party than at any point in the range of data.
 
 !["Proportion of Partisans with sub 50 In-Party FT"](fig/gg-below-50-ns.png) ***Fig 3:** The proportion of partisans cold towards their own party has increased substantially since 2004.*
 
-The increasing frequency of cold in-party affect is shown in Figure 2 In 2004, less than 5% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10% of Democrats and almost 20% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Additional figures will made available in the appendix.
-
-Finally, Figure 4 displays changes in the distribution of in-party FTs over time. From 2004--2016, the left tail has grown noticeably longer and more dense. While the majority of partisans remain warmer than 50, these figures are striking.
+The increasing frequency of cold in-party affect is shown in Figure 2 In 2004, less than 5% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10% of Democrats and almost 20% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Finally, Figure 4 displays changes in the distribution of in-party FTs over time. From 2004--2016, the left tail has grown noticeably longer and more dense. While the majority of partisans still remain warmer than 50 towards their in-party these figures are striking, particularly in a period of razor-thin election results and vanishing marginal districts. As I discuss in the next section, there are behavioral differences between cold and warm partisans.
 
 !["Ridgeline plot of partisan feeling thermometers."](fig/gg-ridge-grid.png) ***Fig 4:** These figures show the changing distribution of partisan affect. The left hand plot shows the mean partisan FT of Republicans, Democrats, and Independents. The plot on the right shows only Republican and Democrats' in-party FT. In both cases, the increasing left skew is apparent.*
 
-Figure 4 shows all respondents' mean partisan feeling thermometer (the average of their Democrat and Republican thermometers), stratified by whether the respondent is satisfied or dissatisfied with Democracy. Unsurprisingly, the leftward tails are largest among discontents, but all three groups (satisfied, dissatisfied, and those who weren't sure or declined to answer) have become increasingly likely to be, an average, cold towards the parties.
 
 ## Differences Between Cold and Warm Partisans.
 
-!["Knowledge, opinion, and behavioral differences between cold and warm partisans"](fig/gg-pooled-combined-strict.png) ***Fig 5:** Knowledge, opinion, and behavioral differences between cold and warm partisans. Cold partisans are more pessimistic about government than their warm co-partisans, and are more likely to support third-party and major out-party candidates. Interestingly, they are similarly engaged as their warm counterparts. Voting, campaigning, and discussing politics at similar rates.*
+!["Knowledge, opinion, and behavioral differences between cold and warm partisans"](fig/gg-pooled-combined-strict.png) ***Fig 5:** Knowledge, opinion, and behavioral differences between cold and warm partisans. Cold partisans are more pessimistic about government than their warm co-partisans, and are more likely to support third-party and major out-party candidates. Interestingly, they are similarly engaged as their warm counterparts. Voting, campaigning, and discussing politics at similar rates.
 
-[Add discussion of fig 5, discuss implications of different vote choices/pessimism]
+As shown in figure 5, differences in attitudes and behavior are prevalent between cold and warm co-partisans. Those cold towards their own party (defined here as those reporting a feeling thermometer of less than 50) are unsurprisingly more pessimistic about the state of government, politics, and the country writ large. Similarly unsurprising, they are more likely to vote against their party's nominees in presidential and congressional races. What is unexpected is the degree to which they are similar to their warm (a feeling thermometer greater than 70) co-partisans&mdash;exhibiting no statistically significant differences in political knowledge and engagement.
+
+Those cold towards their own parties are similarly likely to their warm co-partisans to participate in campaigns, watch political content on television, discuss politics, and correctly identify the party in control of the congress at the time of their interview. Cold partisans do not appear to be any more disengaged from politics than their co-partisans, but do not share their party loyalty. As the number of cold-partisans in the electorate increases, it is important for scholars and practitioners of politics to understand the causes behind declines in affect so as to better respond to voters' preferences.
 
 ## Primaries
 
-### Descriptive Data
-
-I turn now to an examination of the relationship between primary vote choice and in-party affect. I argue that the increase in cold partisan affect can be explained in part by "sore losers" in primary elections---as primaries become more salient, so to do the factions represented by supporters of particular candidates. In short, primary elections provide another layer of group-based political identity below the party, forcing partisans to see not just the out-party as adversarial, but members of their own party as well.
+Having made the case that in-party attitudes are a worthwhile field of study with consequences for political behavior, I turn now to an examination of the relationship between primary vote choice and in-party affect. I argue that the increase in cold in-party affect can be explained in part by "sore losers" in primary elections---as primaries become more salient, so to do the factions represented by supporters of particular candidates. In short, primary elections provide another layer of group-based political identity below the party, forcing partisans to see not just the out-party as adversarial, but members of their own party as well.
 
 !["Affective Differences between primary winners and losers"](fig/gg-primaries-grid.png) ***Fig 6:** Losers in primaries are colder towards the in-party than winners.* There are not substantial differences between losers and winners in their attitudes towards the out-party.*
 
-Primary elections are substantively significant events, allowing partisans a voice in the presentation and direction of their party. In a political environment in which the presidential nominee becomes the *de facto* leader of the party, the primary process affords non-elite voters a voice in the ideological, political, and stylistic future of the party. The political products offered by primary candidates may reflect (or drive) extant divisions in the party. [@wronski2018tale] and [@bankert2020authoritarian] find that those scoring highly on measures authoritarian personality traits use their primary vote to "protect" their party from factions they see as threatening group cohesion. Just as voters do not toss a coin to decide their general election vote, they do not randomly select their choice in the primary; these choices are likely to be meaningful; if not as matters of issue-ideology but of political identity.
+Primary elections are substantively significant events, allowing partisans a voice in the presentation and direction of their party. In a political environment in which the presidential nominee becomes the *de facto* leader of the party, the primary process affords non-elite voters a voice in the ideological, political, and stylistic future of the party. The political products offered by primary candidates may reflect (or drive) extant divisions in the party. [@wronski2018tale] and [@bankert2020authoritarian] find that those scoring highly on measures authoritarian personality traits use their primary vote to "protect" their party from factions they see as threatening group cohesion. Just as voters do not toss a coin to decide their general election vote, they do not randomly select their choice in the primary; these choices are likely to be meaningful&mdash;or to become meaningful, if not as matters of issue-ideology but of political identity.
 
-Figure 6 shows the distribution of in and out-party feeling thermometer between those who voted for the eventual winners and losers of their party's primary, as well as those who did not vote.
+In general elections, candidates' party identification acts as an efficient heuristic under an ideologically sorted elite environment by which voters can base their evaluations of a candidate [@rohde1991parties]. Of course, in a primary the party ID heuristic is largely meaningless; all candidates in the race (barring an open or jungle primary system) share a party. Candidates must therefore work to differentiate each other from their opponents.
 
-[Expand Section]
+One way this is accomplished is by adopting a posture *towards* the party, be it embracing or adversarial. Though the candidates may share a party affiliation, their framing of a *disposition* towards the party can serve to set them apart from the other candidates in the field. Both @dyck2018primary and @manento2021party find systematic differences in candidate preference between those trusting of their party and their low-trust copartisans. Irrespective of whether partisans select candidates who reflect their dispositions towards their party or if partisans adopt the in-party affect of their preferred primary candidate the end result is the same&mdash;in-party affect becomes sorted along lines of candidate support.
+
+The necessity to differentiate onesself from the other candidates in the field has the effect of raising the stakes of the nomination. The opposing primary candidates must be made to appear undesirable to a constituency. In other words; voters do not just gain positive utility from winning elections, but lose some utility equal to the differential (on whatever axis) between their candidate and the opposition. The results of the primary affirm to the winners that theirs is the dominant faction within a party and signal to the losers that their co-partisans writ large do not share their preferences.
+
+## Primary Vote as Independent Variable
+
+Vote choice&mdash;or preference for a candidate more generally&mdash;are most often analyzed as the outcome of (potential) voters' preferences and evaluations of candidates' attributes. That primary voters choose their candidate in part to safeguard group cohesion in their party [@wronski2018tale; @bankert2020authoritarian] begs the question: what happens to the group when candidates lose? How do partisans react when the preferences of some in the party are advantaged above their own? Scholars of policy feedback have found citizens who perceive themselves as being cut out of government decision making processes to be more disaffected and less participatory in democratic political activities [@soss1999lessons; @bruch2010policy]. Not only do individuals assess individual programs and actors on the basis of their (perceived) inclusiveness, assessments of individuals' own roles and place in political society are conditioned in part by signals they receive from political and policy actors [@campbell2012policy]. I argue that this is likely to hold true in the context of primary elections. Primary voters who perceive their party working against their preferred candidate should become more distrusting of political elites and display less affinity for their own party. 
+
+Party elites may not be *government* policymakers or bureaucrats, but they are certainly *political* actors; their sphere of policy influence is simply constrained to the internal workings of one party&mdash;not the government writ-large. It is unlikely that the blurry distinction between "government" and "political" matters all that much to the rationally ignorant median voter as they assimilate political information and update their evaluations of elites and themselves. Moreover, government employees and party apparatchiks each wield considerable power shaping possible policy outcomes. Insofar as disaffection stems from being "cut out" of the policy process it is not clear that the legal distinction between government and party *should* be affectively salient to observers, political sophisticates or not. Further, primary elections are programs designed and implemented by a vast bureaucracy of national and state parties, private information systems providers, federal government regulators, and local supervisors of elections; structurally similar to many federated programs, even if the primary bureaucracy only becomes salient to the public every two or four years at best. 
+
+In light of these structural similarities, it is worth asking how well insights from the policy feedback literature travel to the context of candidate selection. Theoretically, public perceptions of exclusionary politicking or unfair treatment of candidates by party elites should depress voters' assessment of the nominating process and their affection for the party. Such perceptions signal to the individual both that they hold little power in the nominating process and that those partisan actors who are powerful do not represent the interests of the powerless primary voter in question. In a policy feedback framework, the primary voter perceives a top-heavy, paternalistic party organization and has internalized their own un-belonging within that organization. Concomitant with their declining trust, disaffected partisans have little incentive (whether material or group-motivated) to participate in political activity.
+
+In the presidential context, a primary loss is a rebuke of the preferences of losers supporters and the ascension of the representative of an *outgroup* to the station *de facto* leader of the *in-party*. During the primary season, a primary voter's in-group is not only their fellow Democrats or Republicans, but fellow Sanders, Warren, Buttigieg; Trump, Cruz, and Rubio voters as well. Those supporters of the opposing primary candidates then constitute an out-group *within* the party, the salience of which is endogenous to the affective tenor of the primary and the degree to which the candidates distinguish themselves from the opposition. When the party
+
+### Descriptive Data
+
+Figure 6 shows the distribution of in and out-party feeling thermometer between those who voted for the eventual winners and losers of their party's primary^[For the sake of clarity, non-voters are excluded, but a version of this plot which includes them will be made available on this project's GitHub page], as reported in the 2008, 2012, and 2016 ANES Time-Series Studies. In each election year, those who supported the winning candidate in a primary report higher average in-party feeling thermometers and remarkably similar average out-party feeling thermometers. 
+
+While it should be stressed that the feeling thermometer distributions between losers and winners show a great deal of overlap, in each case, a greater proportion of winners report in-party feelings at the warmest end of the scale than do the losers, while each primary's distribution of losers' in-party affect exhibits a fat, left-skewed tail. Primary voters appear to be united in their distaste for the out-party, but exhibit in-party affective distributions conditional in part on their primary candidate's victory or defeat.
+
+These data are consistent with a causal process whereby a primary loss (win) decreases (increases) partisans' in-party warmth, but are observationally equivalent to the pattern that would be observed if partisans selected their candidate based (at least in part) on their pre-existing disposition towards the party, with the outcome of the primary having no effect on partisans' attitudes. Using these data we can only observe vote choice and affect simultaneously, I next turn to panel data to establish causal priority.
 
 ### Panel Data
 
-To overcome the problem of observational equivalence inherent to the cross-sectional ANES, I leverage a series of panel studies conducted by the National Annenburg Election Survey and the American National Election Study. Following @lenz2013follow, I plan to employ a series of "three-wave tests" of the effect of a primary loss on various outcome variables; strength of partisan identification, general election voting behavior, political activism, and partisan warmth. 
+To overcome the problem of observational equivalence inherent to the cross-sectional ANES, I leverage a series of panel studies conducted by the National Annenburg Election Survey and the American National Election Study. Following @lenz2013follow, I employ a three-wave test of partisan strength on subgroups of winning and losing primary voters. Rather than partisan feeling thermometers, as used above, I rely on a dummy variable for a respondent in a wave expressing "strong" partisanship; the greatest degree to which a respondent can identify with a party on the Annenburg study's 7-point party identification scale. This measure is less than ideal; I would like to be able to gain causal leverage on in-party feeling thermometer ratings, as these are where I have focused the bulk of my descriptive efforts. That said, strength of partisanship is a reasonable proxy for feeling thermometers in a pinch, As shown below, there is a clear (if weak) positive relationship between partisans' strength and their in-party warmth.
+
+!["Three Wave Test of Primary Outcome on Partisan Strength"](fig/gg-str-therm.png) ***Fig 7:** 
+
+The three wave test leverages panel data&mdash;in this case from an Annenburg study of the 2008 election&mdash;to compare the effect of a variable before and after it becomes salient. In this case, the effect of supporting John McCain or Barack Obama in their primary bids before and after the results of the primary are revealed. Though voters know which candidate they support in each wave of the survey; they do not know that candidate's status as a winner of loser until the treatment&mdash;a presumptive nominee being called&mdash;is delivered. 
+
+
+!["Three Wave Test of Primary Outcome on Partisan Strength"](fig/gg-three-wave-str.png) ***Fig 8:** The difference between Hillary and Obama voters in the change in proportion of strong partisans from Wave 1 to Wave 2 increased after Obama became the presumptive nominee. The same effect is not observed in Republicans. The proportion of strong partisans decreased by about 5\% after McCain wrapped up the primary, regardless of who was supported.*
+
+While voters may still select their candidate based on the strength of identification with their party, this is not problematic for the research design as the quantities compared are the *change* between waves not the absolute proportion of strong partisans in each wave. The effect of primary victory for each party is therefore:
+$$
+\left[(W_3 - W_2)-(W_2 - W_1)\right] - [(L_3 - L_2)-(L_2 - L_1)]
+$$
+where $W_i$ is the proportion of strong partisans among winners in wave $i$ and $L_i$ is the proportion of strong partisans among losers in wave $i$.
+
+As shown in in Figure 8, the three wave test of strong partisanship in the 2008 election provides mixed support for the sore losers hypothesis. The effect of primary victory is clear among democrats, but no such effect exists among Republicans&mdash;the proportion of Strong Republicans decreased by about .03, regardless of their candidate's electoral fortunes.
+
+Figure 9 is not a three-wave test, but visualizes differences in general election voting behavior between primary winners and losers across party. Again, our results are puzzling. Democrats, as expected based on my analysis of ANES respondents, who supported Obama were more likely (or at minimum, not less likely) to vote for Obama for the Presidency and other Democrats in House, Senate, and gubernatorial races. On the other hand, Republicans who supported McCain in the primary were significantly *less* likely to vote for Republicans in those races than their non-McCain-supporting co-partisans. Again, we are left with mixed support.
+
+!["Differences in General Election voting by Primary Victory"](fig/gg-behav-difs.png) ***Fig 9:** Democratic primary winners are more likely to vote for members of their own party in the general election, but the opposite is true of Republicans*
+
+# Discussion
+
+Why might it be that Republican and Democratic primary voters appear so different from one another? The most obvious answer is that these panel data are limited to a single election&mdash;one interrupted in September 2008 by the collapse of Lehman Brothers and the beginning of the Great Recession. After the financial crisis began, it became clear that McCain's prospects in November were dim. Perhaps newly-disillusioned supporters of the relatively moderate McCain jumped from the Republican ship, blaming the Bush administration for the financial crisis while those attracted to more extreme primary candidates remained on board.
+
+Another possible explanation is that Democrats and Republicans engage with primary elections in different ways. The Democratic nominating system is borne of an activist-driven push to democratize the candidate selection process after the disastrous 1968 Democratic National Convention; many of the reforms pushed by the Democratic McGovern-Fraser committee were also enacted in Republican primaries by necessity of state laws that party nominating processes be similar.
+
+In closing, I echo the lament of [@lenz2013follow] that there is a dearth of high-quality, large $n$, long term panel data suitable to the application of the three wave test. Suitable surveys must ask the same cohorts of respondents questions regarding each of the researcher's outcomes of interest (already a challenge in cross-sectional studies) at least three times, over a period of time long enough to capture the study's treatment. As I develop this project further into a practicum (and presumably a dissertation), these panel analyses will be bolstered by a greater breadth of elections data as more suitable studies are conducted (or found in bibliographies and GitHub repositories). In the mean time, the findings I *do* present are descriptively interesting and causally suggestive on their own merit, suggestive picture of trends and patterns in partisans' feelings about their own party&mdash;an understudied area in political opinion and behavior and one to which public opinion scholars should study with increased scrutiny. 
+
+
+
+
 
 \clearpage
 
